# alfen_ha

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.portainer.solar.yml  docker-compose.portainer.yml  docker-compose.yml  eve.md  modbus_explorer.yaml
doc/: energy_mqtt_architecture (1).drawio  energy_mqtt_architecture.drawio
scripts/: deploy_portainer_stack.sh  export_portainer_image.sh
src/: main copy.rs  main.rs
