[package]
name = "alfen-mqtt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alfen-mqtt"
path = "src/main.rs"

[[bin]]
name = "alfen_solar"
path = "src/bin/alfen_solar.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-modbus = { version = "0.5", features = ["tcp"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
byteorder = "1"
eframe = "0.30"
egui_extras = "0.30"